# rust-anilist

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml  test.yml
queries/: get_anime.graphql  get_character.graphql  get_manga.graphql  get_person.graphql  get_user.graphql  search_anime.graphql  search_manga.graphql  search_user.graphql
src/: client.rs  error.rs  lib.rs
src/models/: anime.rs  character.rs  color.rs  cover.rs  date.rs  format.rs  gender.rs  image.rs  language.rs  link.rs  manga.rs  media.rs  mod.rs  name.rs  notification.rs  person.rs  relation.rs  season.rs  source.rs  status.rs  studio.rs  tag.rs  title.rs  user.rs
tests/: anime.rs  character.rs  manga.rs  user.rs
