[package]
name = "rust-anilist"
version = "0.1.2"
authors = ["Andriel Ferreira <andrielfr@proton.me>"]
license = "MTI"
description = """
Just an Anilist wrapper.
"""
homepage = "https://github.com/AmanoTeam/rust-anilist"
repository = "https://github.com/AmanoTeam/rust-anilist"
keywords = ["api", "anilist", "anilist-api"]
categories = ["api-binding"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
chrono = "*"
reqwest = "*"
thiserror = "2"
serde_json = "1"

[dev-dependencies]
rusty-hook = "*"
