[package]
name = "rust-anilist"
version = "0.1.2"
authors = ["Andriel Ferreira <andrielfr@proton.me>"]
license = "MIT"
description = """
A Rust wrapper for the Anilist API, providing asynchronous methods to interact
with various entities like Anime, Manga, User, Person, and Character.
"""
readme = "README.md"
homepage = "https://github.com/AmanoTeam/rust-anilist"
repository = "https://github.com/AmanoTeam/rust-anilist"
keywords = ["api", "anilist", "anilist-api"]
categories = ["async", "api-binding"]
edition = "2021"
exclude = [".github/*", ".rusty-hook.toml"]

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
chrono = "*"
reqwest = "*"
thiserror = "2"
serde_json = "1"

[dev-dependencies]
rusty-hook = "*"
